--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
-    
+    <script src="js/main.js"></script>
+    <script src="js/library/Rulette.js"></script>
+    <script src="js/library/sweetalert2@11.js"></script>
+    <script src="js/library/TweenMax.min.js"></script>
 </body>
 </html>
