all styles for html has been added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                             </div>
                             <p class="formulario__input-error">La cuenta solo puede un número de 8 digitos</p>
                            </div>
+                        </div>
+                    </div>
+                </div>
+                           
 
 
 
