--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
 
     <script src="js/main.js"></script>
+    <script src="js/validate.js"></script>
     <script src="js/library/Rulette.js"></script>
     <script src="js/library/sweetalert2@11.js"></script>
     <script src="js/library/TweenMax.min.js"></script>
